first api to get issue works
